Fixed navbar flicker and movie transition

--- a/public/style/search.css
+++ b/public/style/search.css
@@ -1,6 +1,6 @@
 .movie {
     margin: 0.5rem;
-    min-width: 300px;
+    width: 300px;
     height: 480px;
     text-align: left;
     background-color: whitesmoke;
@@ -125,15 +125,15 @@
 }
 
 .is-showing img {
-    transform: scale(1) !important;
-    border-radius: 0px !important;
+    transform: scale(1);
+    border-radius: 0px;
     object-fit: contain !important;
     object-position: left !important;
-    transition: 500ms !important;
+    transition: 500ms;
 }
 
 .is-showing .poster-container {
-    border-radius: 0px !important;
+    border-radius: 0px 0px 0 0 !important;
     transition: 500ms;
     height: 100%;
 }
